--- a/APIPOLITICA/package.json
+++ b/APIPOLITICA/package.json
@@ -13,6 +13,7 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.29.1",
     "mongoose": "^5.11.17",
+    "mongoose-paginate-v2": "^1.3.14",
     "nodemon": "^2.0.7",
     "yarn": "^1.22.10"
   },
