--- a/APIPOLITICA/package.json
+++ b/APIPOLITICA/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.11.17",
     "mongoose-paginate-v2": "^1.3.14",
     "nodemon": "^2.0.7",
+    "slug": "^4.0.2",
     "yarn": "^1.22.10"
   },
   "scripts": {
